# integral

./: Cargo.toml  readme.md
src/: lib.rs  simd.rs
