[package]
name = "integral_lib"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["WhiskyAKM"]
repository = "https://github.com/PTFOPlayer/integral"
description = "Simple liblary for solving integrals using numerical methods"
categories = ["math"]
keywords = ["integral", "numeric"]

[features]
simd = []

[dependencies]