[package]
name = "integral_lib"
version = "0.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["WhiskyAKM"]
repository = "https://github.com/PTFOPlayer/integral"
description = "Simple liblary for solving integrals using numerical methods"
categories = []
keywords = ["integral", "math", "numeric"]
readme = "readme.md"

[features]
simd = []

[dependencies]